[gd_scene load_steps=6 format=3 uid="uid://67lmi3g1dnr3"]

[ext_resource type="FontFile" uid="uid://bkwyiy5jwrbfr" path="res://maptree/ui/font/Skynight.otf" id="1_5ube4"]
[ext_resource type="Script" uid="uid://c4b5fuwym5r1e" path="res://maptree/Event/event_muster.gd" id="1_ag8ri"]
[ext_resource type="PackedScene" uid="uid://0xlyb4l263wf" path="res://maptree/Event/event_option_button.tscn" id="2_xbnql"]

[sub_resource type="Gradient" id="Gradient_sx0wx"]
colors = PackedColorArray(0.18039216, 0.16470589, 0.5686275, 1, 0.15294118, 0.15294118, 0.15294118, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5ube4"]
gradient = SubResource("Gradient_sx0wx")

[node name="EventMuster" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ag8ri")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_5ube4")

[node name="EventTitle" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 85.0
offset_bottom = 185.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 45
text = "Seeteufel"
horizontal_alignment = 1
vertical_alignment = 2

[node name="StoryContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 210.0
offset_right = 551.0
offset_bottom = 590.0

[node name="MarginContainer" type="MarginContainer" parent="StoryContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="StoryContainer/MarginContainer"]
layout_mode = 2

[node name="Situation" type="RichTextLabel" parent="StoryContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_5ube4")
theme_override_font_sizes/normal_font_size = 30
text = "Du findest diese Nachricht und fragst dich jetzt was du tun sollst?"

[node name="OptionsContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 601.0
offset_top = 210.0
offset_right = 1102.0
offset_bottom = 590.0

[node name="MarginContainer" type="MarginContainer" parent="OptionsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Options" type="VBoxContainer" parent="OptionsContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="OptionButton1" parent="OptionsContainer/MarginContainer/Options" instance=ExtResource("2_xbnql")]
unique_name_in_owner = true
layout_mode = 2

[node name="OptionButton2" parent="OptionsContainer/MarginContainer/Options" instance=ExtResource("2_xbnql")]
unique_name_in_owner = true
layout_mode = 2

[node name="OptionButton3" parent="OptionsContainer/MarginContainer/Options" instance=ExtResource("2_xbnql")]
unique_name_in_owner = true
layout_mode = 2
